# GeoControls

./: .clang-format  .gitignore  .qmlformat.ini  AGENTS.md  CMakeLists.txt  FluentUIProAdoption.md  README.md  TodoList.md
AppShell/: CMakeLists.txt  CmdInputArea.qml  FramelessResizeHandles.qml  MainStatusBar.qml  MainToolBar.qml  MiniViewer2d.qml  RouteView.qml  ServerConfigSection.qml  SplashScreen.qml  WindowCaptionButtons.qml
Controls/: Badge.qml  Breadcrumb.qml  CMakeLists.txt  ChartLine.qml  ChartPie.qml  ChartScatter.qml  Chip.qml  ColorPicker.qml  ColorTabBar.qml  ColorTabButton.qml  ConfirmationButtons.qml  ControlState.qml  CustomAxisSwitcher.qml  CustomBinarySwitch.qml  CustomButton.qml  CustomChart.qml  CustomCheckBox.qml  CustomColorPicker.qml  CustomComboBox.qml  CustomEditPanel.qml  CustomGroupBox.qml  CustomIconActionButton.qml  CustomLabel.qml  CustomMatrixInput.qml  CustomPanelCheckButton.qml  CustomPanelDisclosureButton.qml  CustomPanelGlyphButton.qml  CustomPanelIconButton.qml  CustomPlusMinusControl.qml  CustomRadioButton.qml  CustomRangeSlider.qml  CustomRectangle.qml  CustomSlider.qml  CustomSpinBox.qml  CustomSwitch.qml  CustomTabBar.qml  CustomTabBarEven.qml  CustomTabButton.qml  CustomTextField.qml  CustomToolButton.qml  (+49 more)
GuiDemo/: CMakeLists.txt  FontMetricsProvider.cpp  FontMetricsProvider.h  ThemeHelper.cpp  ThemeHelper.h  main.cpp  main.qml
GuiDemo/cmake/: WriteLauncher.cmake
cmake/: GeoControlsConfig.cmake.in
githooks/: pre-commit
icons/: AppIcon.icns  RobimFiles.icns
